[tool.poetry]
name = "pit-converter"
version = "0.1.0"
description = ""
authors = ["Jacek Kotlarski <szumak@virthost.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jsktoolbox = "^1.0.16"
sqlalchemy = "^2.0.29"
pysqlite3 = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
